# OpenTrickler-v2

./: AI_TUNING_GUIDE.txt
.github/workflows/: pr_agent.yml
src/: CMakeLists.txt  FloatRingBuffer.cpp  FreeRTOSConfig.h  access_point_mode.c  app.cpp  cat24c256_eeprom.c  charge_mode.cpp  charge_mode.h  cleanup_mode.cpp  common.c  common.h  dhcpserver.c  display.c  display.h  dnsserver.c  eeprom.c  eeprom.h  encoder.cpp  encoder.h  freertos_hooks.c  gp_lite.c  gp_lite.h  http_rest.c  lwipopts.h  lwipopts_examples_common.h  menu.cpp  mini_12864_module.cpp  mini_12864_module.h  motors.c  motors.h  mui_menu.c  neopixel_led.c  neopixel_led.h  profile.c  profile.h  rest_endpoints.c  scale.c  servo_gate.c  stepper.pio.h  system_control.c  (+3 more)
src/html/: web_portal.html  web_portal_basic.html
